# MT-Tables-Syncer

./: pyproject.toml  start-sync.py
mt_tables_sync/: _version.py  main.py
tests/: test_mt_tables_sync.py
