[tool.poetry]
name = "mt-tables-sync"
version = "0.1.0"
description = ""
authors = ["Jacek Kotlarski <szumak@virthost.pl>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
jsktoolbox = "^1.0.16"


[tool.poetry.group.dev.dependencies]
black = "^24.2.0"
pytest = "^8.1.1"
nose = "^1.3.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
